--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "author": "BlockFactory",
     "license": "ISC",
     "devDependencies": {
-        "@wordpress/babel-plugin-import-jsx-pragma": "^3.1.1",
         "@wordpress/block-editor": "^8.2.0",
         "@wordpress/blocks": "^11.2.2",
         "@wordpress/components": "^19.5.0",
         "@wordpress/data": "^6.3.0",
+        "@wordpress/edit-post": "^6.0.2",
         "@wordpress/element": "^4.1.1",
+        "@wordpress/hooks": "^3.3.1",
         "@wordpress/i18n": "^4.3.1",
+        "@wordpress/plugins": "^4.1.3",
+        "@wordpress/babel-plugin-import-jsx-pragma": "^3.1.1",
         "@wordpress/scripts": "^22.1.0",
         "wp-pot": "latest"
     }
